AVISIMPL-336 UI for statistics report: Added separation of  statistics for different batches.

--- a/src/main/web/statistics/statistics.html
+++ b/src/main/web/statistics/statistics.html
@@ -18,7 +18,8 @@
 <div id='tree'></div>
 
 <script>
-  var filepath = 'statistics.xml'
+  var batchid = location.search.split('batchid=')[1]
+  var filepath = "data/" + batchid + '-statistics.xml'
   $(function() { new XMLTree({
     fpath: filepath, container: '#tree', startExpanded: false, openAtPath: 'Batch' , attrs: 'hidden'
   }); });
